--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <!-- TODO: Add GTM head script here -->
 </head>
 <body class="bg-light">
-  <!-- TODO: Add GTM noscript here -->
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRNHMRM3"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   {% include header.html %}
   <main class="main pt-5">
     {{ content }}
