--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <!-- TODO: Add GTM head script here -->
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YLYYG8L1HZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YLYYG8L1HZ');
+</script>
 <body class="bg-light">
   <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRNHMRM3"
